assets/custom-product.css
/* ... */
.product--specifications h2 {
    font-size: 2rem !important;
    line-height: 2.75rem !important;
    font-weight: 700 !important;
}

.customize_quote_buttons_wrapper {
    display: flex;
    gap: 10px;
    margin-top: -1rem;
}

.customize_quote_buttons_wrapper .button {
    width: 100%;
    font-weight: 600 !important;
}

.button.button-white {
    background-color: transparent !important;
    color: #3A3A3C;
}

.button.button-white::after,
.button.button-white:not([disabled]):hover:after {
    box-shadow: 0 0 0 calc(var(--buttons-border-width) + var(--border-offset)) rgba(var(--color-button-text), var(--border-opacity)), 0 0 0 2px rgba(var(--color-button_background_2), var(--alpha-button-background));
}

.volume_pricing_message,
#discount-progress,
.volume_pricing_info {
    cursor: pointer;
}

#discount-progress {
    clear: both;
    margin: 0 0 0 0 !important;
}

#discount-progress #current-discount {
    display: none;
}

#discount-progress #next-discount-info {
    font-weight: 700;
}

.regios-dopp-generic-volume-pricing-table {
    margin: 0 0 0 0 !important;
    border-width: 0px !important;
    width: 100%;
}

.regios-dopp-generic-volume-pricing-table th {
    border-width: 0px !important;
}

.regios-dopp-generic-volume-pricing-table td {
    border-width: 1px 0px 1px 0px !important;
    border-color: #e5e7eb !important;
}

.regios-dopp-generic-price-container:not(.regios-dopp-generic-price--on-sale) .regios-dopp-generic-price-item--regular {
    display: block;
    font-size: calc(var(--font-heading-scale) * 2.2rem);
    font-weight: 700;
}

.volume-pricing-table-wrapper {
    height: 0px !important;
    overflow: hidden;
}

.volume-pricing-table-wrapper.open {
    height: auto !important;
}

.quantity:after {
    box-shadow: none !important;
}

.quantity {
    border-width: 2px;
    border-style: solid;
    border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
    width: 100%;
    border-radius: 0.5rem;
}

.quantity .quantity__input {
    border-width: 0 2px;
    border-style: solid;
    border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
}

.product-reviews-wrapper {
    float: left;
    width: 50%;
    line-height: 37.8px;
    margin: 0 0 0 0 !important;
}

#product_just_stars .ind_cnt {
    display: inline !important;
    padding-left: 8px !important;
    font-size: 1.5rem !important;
    vertical-align: 3px !important;
    text-decoration: none;
}

#product_just_stars .ind_cnt .sa_jump_to_reviews {
    color: #000000;
}

